@@ -2,7 +2,7 @@
  Project: Graphos
  GRBezierControlPoint.h
 
- Copyright (C) 2000-2008 GNUstep Application Project
+ Copyright (C) 2000-2013 GNUstep Application Project
 
  Author: Enrico Sersale (original GDraw implementation)
  Author: Ing. Riccardo Mottola
@@ -46,7 +46,7 @@ typedef struct
 
 - (id)initAtPoint:(NSPoint)aPoint
           forPath:(GRBezierPath *)aPath
-       zoomFactor:(float)zf;
+       zoomFactor:(CGFloat)zf;
 
 - (void)calculateBezierHandles:(NSPoint)draggedHandlePosition;
 - (void)moveToPoint:(NSPoint)p;
